# sw

./: README.md  pyproject.toml
.github/workflows/: ci.yml
sw/: main.py
