[tool.poetry]
name = "sw"
version = "0.1.1"
description = ""
authors = ["kiinami <kinami@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.scripts]
sw = "sw.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
